// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RandomBeer shows a random beer 1`] = `
<DocumentFragment>
  <div
    class="random-beer"
  >
    <div
      class="title-block"
    >
      <h3>
        Punk IPA 2007 - 2010
      </h3>
      <img
        alt="Label for Punk IPA 2007 - 2010"
        height="100"
        src="https://images.punkapi.com/v2/192.png"
      />
    </div>
    <div
      class="label-block"
    >
      Our flagship beer that kick started the craft beer revolution. This is James and Martin's original take on an American IPA, subverted with punchy New Zealand hops. Layered with new world hops to create an all-out riot of grapefruit, pineapple and lychee before a spiky, mouth-puckering bitter finish.
    </div>
    <div
      class="cta-block"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Random beer
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          More details
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RandomBeer shows a validation state 1`] = `
<DocumentFragment>
  <div
    class="random-beer"
  >
    <div
      class="title-block"
    >
      <h3 />
      <img
        alt="Label for undefined"
        height="100"
      />
    </div>
    <div
      class="label-block"
    />
    <div
      class="cta-block"
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-loading"
        type="button"
      >
        <span
          class="ant-btn-loading-icon"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </span>
        <span>
          Random beer
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default ant-btn-loading"
        type="button"
      >
        <span
          class="ant-btn-loading-icon"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </span>
        <span>
          More details
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
